Fixing the cut off menu

--- a/mht/css/graph-menu.css
+++ b/mht/css/graph-menu.css
@@ -41,7 +41,7 @@
 #graph-menu #content {
 		overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
-	height:100%;
+	height:94%;
 
 }
 	
